<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_cheats">
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="prefEnableAnswer"
                android:title="@string/pref_enable_answer"
                android:summary="@string/pref_enable_answer_summary">
        </CheckBoxPreference>
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="prefEnablePowerup"
                android:title="@string/pref_enable_powerup"
                android:summary="@string/pref_enable_powerup_summary">
        </CheckBoxPreference>
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="prefEnableBomb"
                android:title="@string/pref_enable_bomb"
                android:summary="@string/pref_enable_bomb_summary">
        </CheckBoxPreference>
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="prefEnableTimer"
                android:title="@string/pref_enable_timer"
                android:summary="@string/pref_enable_timer_summary">
        </CheckBoxPreference>
    </PreferenceCategory>
</PreferenceScreen>